<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Java2Project</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="instructions">Select a location</string>
    <string name="titletext">Weather Feed</string>
    <string name="buttontext">Get Weather</string>
    <string name="apikey">2xhsswmswuh5c65xxnrcdqv4</string>
    <string name="houston">Houston</string>
    <string name="chicago">Chicago</string>
    <string name="miami">Miami</string>
    <string name="seattle">Seattle</string>
    <string name="condition">Condition </string>
    <string name="humidity">Humidity </string>
    <string name="temp">Temperature </string>
    <string name="winspd">Wind Speed </string>
    <string name="windir">Wind Direction </string>
    <string name="logo">App Logo</string>
    <string name="blank"> </string>
    <string name="current">Current Weather</string>
    <string name="day_field">Day </string>
    <string name="temp_field"> Temp </string>
    <string name="humidity_field"> Humidity </string>
    <string name="condition_field"> Condition</string>
    
</resources>