<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/AppBaseTheme">
    
    <TextView android:id="@+id/title"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:paddingBottom="10dip"
        android:text="@string/titletext"
        style="@style/Titles"
    />

    <ViewFlipper android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoStart="true"
        >
        <ImageView
        android:id="@+id/weatherimage"
        style="@style/ImageStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/sunny" />
        
        <ImageView
        android:id="@+id/weatherimage2"
        style="@style/ImageStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/cloudy" />
        
        <ImageView
        android:id="@+id/weatherimage3"
        style="@style/ImageStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/rainy" />
        
    </ViewFlipper>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView android:id="@+id/instructions"
            android:layout_width="match_parent" 
	        android:layout_height="wrap_content" 
	        android:paddingBottom="10dip"
	        android:text="@string/instructions"
	        style="@style/Titles"
    	/>
        
        <RadioGroup android:id="@+id/locales" android:layout_width="wrap_content" 
        	android:layout_height="match_parent">
	        <RadioButton android:text="@string/houston" style="@style/RadioStyle"/>
	        <RadioButton android:text="@string/chicago" style="@style/RadioStyle"/>
	        <RadioButton android:text="@string/miami" style="@style/RadioStyle"/>
	        <RadioButton android:text="@string/seattle" style="@style/RadioStyle"/>
    	</RadioGroup>
        
    </LinearLayout>
    
    <Button android:id="@+id/weather_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttontext"
    />

</LinearLayout>