<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/AppBaseTheme"
    >
        
        <TextView android:id="@+id/conditionheader" 
            	android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current"
                android:textAlignment="center"
                android:paddingBottom="10dip"
                style="@style/Titles"
        />
        
        <GridLayout android:id="@+id/gridconditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">
            
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condition"
                style="@style/WeatherTitles"
                />
            
            <TextView android:id="@+id/currentcondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                style="@style/WeatherTitles"
                />
            
            <TextView android:id="@+id/tempcondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                style="@style/WeatherTitles"
                />
            
            <TextView android:id="@+id/humiditycondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/winspd"
                style="@style/WeatherTitles"
                />
            
            <TextView android:id="@+id/winspdcondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
           <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/windir"
                style="@style/WeatherTitles"
                />
            
            <TextView android:id="@+id/windircondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
        </GridLayout>
        
        <TextView android:id="@+id/forcastheader" 
            	android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/Titles"
                />
        
        <ListView android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            ></ListView>
        
       <GridLayout android:id="@+id/gridforecast"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:columnCount="4"
            android:padding="5dip"
            >
            
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_field"
                style="@style/WeatherTitles"
                />
            
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_field"
                style="@style/WeatherTitles"
                />
            
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity_field"
                style="@style/WeatherTitles"
                />
            
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condition_field"
                style="@style/WeatherTitles"
                />
            
            <TextView android:id="@+id/day1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherTitles"
                />
            
            <TextView android:id="@+id/day1_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
            <TextView android:id="@+id/day1_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
            <TextView android:id="@+id/day1_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
            <TextView android:id="@+id/day2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherTitles"
                />
            
            <TextView android:id="@+id/day2_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
            <TextView android:id="@+id/day2_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
            <TextView android:id="@+id/day2_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
            <TextView android:id="@+id/day3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherTitles"
                />
            
            <TextView android:id="@+id/day3_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
            <TextView android:id="@+id/day3_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
            <TextView android:id="@+id/day3_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
            <TextView android:id="@+id/day4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherTitles"
                />
            
            <TextView android:id="@+id/day4_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
            <TextView android:id="@+id/day4_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
            <TextView android:id="@+id/day4_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
            <TextView android:id="@+id/day5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherTitles"
                />
            
            <TextView android:id="@+id/day5_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
            <TextView android:id="@+id/day5_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
            <TextView android:id="@+id/day5_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/WeatherInfo"
                />
            
        </GridLayout>
    
</LinearLayout>